add meta data and preview image

--- a/index.html
+++ b/index.html
@@ -4,7 +4,29 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/transposerx.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Transpose Rx</title>
+    <title>Transpose Rx - Simplify Glasses Prescription Transposition</title>
+    <meta
+      name="description"
+      content="Transpose Rx is a tool to simplify the transposition of glasses prescriptions from negative to positive cylinder formats. Learn how it works!"
+    />
+    <meta
+      name="keywords"
+      content="glasses prescription, transposition, optometry, positive cylinder, negative cylinder, eye care"
+    />
+    <meta name="author" content="rcmcodes" />
+    <meta
+      property="og:title"
+      content="Transpose Rx - Simplify Glasses Prescription Transposition"
+    />
+    <meta
+      property="og:description"
+      content="Easily transpose glasses prescriptions with Transpose Rx. Learn the steps and examples for accurate transposition."
+    />
+    <meta property="og:image" content="/transposerx-preview.webp" />
+    <meta property="og:url" content="https://transposerx.netlify.app" />
+    <meta property="og:type" content="website" />
+
+    <meta name="robots" content="index, follow" />
   </head>
   <body>
     <div id="root"></div>
